Adding attribution and cleaning up styles

--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 
   <head>
-    <title>Website Base</title>
+    <title>Color Swatch Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/build/css/styles.css">
   </head>
 
   <body>
     <main>
-      <header>
-        <h1>Color Swatch Generator</h1>
-      </header>
+      <h1>Color Swatch Generator</h1>
+
+      <p>
+        Use the form below to generate a color swatch for any color. Similar
+        to the <a href="https://wordpress.org/plugins/color-palette/">WordPress 
+        Color Palette plugin</a>, but this version does not require WordPress.
+        Written by <a href="https://jhalabi.com">Joni Halabi</a>.
+      </p>
 
       <form id="generate-swatch">
         <fieldset>
