--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <h1>Color Swatch Generator</h1>
 
       <p>
-        Use the form below to generate a color swatch for any color. Similar
-        to the <a href="https://wordpress.org/plugins/color-palette/">WordPress 
+        Use the form below to generate a color swatch for any color. Once a swatch
+        is generated, you can download it as a .jpg image. Similar to the 
+        <a href="https://wordpress.org/plugins/color-palette/">WordPress 
         Color Palette plugin</a>, but this version does not require WordPress.
         Written by <a href="https://jhalabi.com">Joni Halabi</a>.
       </p>
